--- a/tmc-langs-framework/Cargo.toml
+++ b/tmc-langs-framework/Cargo.toml
@@ -14,7 +14,7 @@ isolang = "1"
 thiserror = "1"
 serde = { version = "1", features = ["derive"] }
 serde_yaml = "0.8"
-zip = "0.5"
+zip = { version = "0.5", default-features = false, features = ["deflate"] }
 schemars = "0.8"
 once_cell = "1"
 nom = { version = "6", features = ["alloc"] }
