--- a/tmc-langs-util/Cargo.toml
+++ b/tmc-langs-util/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["University of Helsinki <mooc@cs.helsinki.fi>", "Daniel Martinez <dan
 edition = "2018"
 license = "MIT OR Apache-2.0"
 
+[features]
+server = ["md5", "shellwords", "zstd"]
+
 [dependencies]
 tmc-langs-framework = { path = "../tmc-langs-framework" }
 tmc-langs-csharp = { path = "../plugins/csharp" }
@@ -13,25 +16,27 @@ tmc-langs-make = { path = "../plugins/make" }
 tmc-langs-notests = { path = "../plugins/notests" }
 tmc-langs-python3 = { path = "../plugins/python3" }
 tmc-langs-r = { path = "../plugins/r" }
+
 log = "0.4"
 tar = "0.4"
 walkdir = "2"
 tempfile = "3"
 zip = "0.5"
-shellwords = "1"
 thiserror = "1"
 impl-enum = "0.2"
-zstd = "0.6"
 lazy_static = "1"
 regex = "1"
 serde_yaml = "0.8"
-md5 = "0.7"
 serde = { version = "1", features = ["derive"] }
 schemars = "0.8"
 heim = { version = "0.1.0-beta.3", features = ["disk"] }
 smol = "1"
 once_cell = "1"
 type-map = "0.4"
+
+md5 = { version = "0.7", optional = true }
+shellwords = {version = "1", optional = true }
+zstd = { version = "0.6", optional = true }
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.19"
