--- a/plugins/r/Cargo.toml
+++ b/plugins/r/Cargo.toml
@@ -7,13 +7,13 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 tmc-langs-framework = { path = "../../tmc-langs-framework" }
+
 log = "0.4"
-thiserror = "1"
-serde_json = "1"
 serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+thiserror = "1"
 
 [dev-dependencies]
-simple_logger = "1"
+simple_logger = "1"tempfile = "3"
 walkdir = "2"
-tempfile = "3"
 zip = "0.5"
