--- a/tmc-langs-util/Cargo.toml
+++ b/tmc-langs-util/Cargo.toml
@@ -17,23 +17,24 @@ tmc-langs-notests = { path = "../plugins/notests" }
 tmc-langs-python3 = { path = "../plugins/python3" }
 tmc-langs-r = { path = "../plugins/r" }
 
-log = "0.4"
-tar = "0.4"
-walkdir = "2"
-tempfile = "3"
-zip = "0.5"
-thiserror = "1"
+heim = { version = "0.1.0-beta.3", features = ["disk"] }
 impl-enum = "0.2"
 lazy_static = "1"
-regex = "1"
-serde_yaml = "0.8"
-serde = { version = "1", features = ["derive"] }
-schemars = "0.8"
-heim = { version = "0.1.0-beta.3", features = ["disk"] }
-smol = "1"
+log = "0.4"
 once_cell = "1"
+regex = "1"
+serde = { version = "1", features = ["derive"] }
+serde_yaml = "0.8"
+schemars = "0.8"
+smol = "1"
+tar = "0.4"
+tempfile = "3"
+thiserror = "1"
 type-map = "0.4"
+walkdir = "2"
+zip = "0.5"
 
+# optional deps
 md5 = { version = "0.7", optional = true }
 shellwords = {version = "1", optional = true }
 zstd = { version = "0.6", optional = true }
