--- a/.github/workflows/upload-binaries.yml
+++ b/.github/workflows/upload-binaries.yml
@@ -22,8 +22,9 @@ jobs:
           sudo apt update
           sudo apt install -y gcc-multilib # required to build for 32-bit arch
       - name: Cargo build
+        working-directory: tmc-langs-cli
         run: |
-          cargo build -p tmc-langs-cli --release --verbose --features server
+          cargo build --release --verbose --features server
       - name: Deploy
         run: gsutil cp target/${{ matrix.target }}/release/tmc-langs-cli gs://${{ secrets.GCP_BUCKET }}/tmc-langs-rust/tmc-langs-cli-server-$TAG
 
@@ -43,9 +44,10 @@ jobs:
           sudo apt update
           sudo apt install -y gcc-multilib # required to build for 32-bit arch
       - name: Cargo build
+        working-directory: tmc-langs-cli
         run: |
           rustup target add ${{ matrix.target }}
-          cargo build -p tmc-langs-cli --release --verbose --target ${{ matrix.target }}
+          cargo build --release --verbose --target ${{ matrix.target }}
       - name: Deploy
         run: gsutil cp target/${{ matrix.target }}/release/tmc-langs-cli gs://${{ secrets.GCP_BUCKET }}/tmc-langs-rust/tmc-langs-cli-${{ matrix.target }}-$TAG
 
@@ -61,10 +63,11 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
       - name: Cargo build # crt-static is set with RUSTFLAGS to statically link MSVCRT (VCRUNTIME140.dll)
+        working-directory: tmc-langs-cli
         run: |
           rustup target add ${{ matrix.target }}
           $env:RUSTFLAGS="-C target-feature=+crt-static"
-          cargo build -p tmc-langs-cli --release --verbose --target ${{ matrix.target }}
+          cargo build --release --verbose --target ${{ matrix.target }}
       - name: Deploy
         run: |
           $env:python_version=$(python -c 'import sys; print(\".\".join(map(str, sys.version_info[:3])))')
@@ -83,9 +86,10 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
       - name: Cargo build
+        working-directory: tmc-langs-cli
         run: |
           rustup target add ${{ matrix.target }}
-          cargo build -p tmc-langs-cli --release --verbose --target ${{ matrix.target }}
+          cargo build --release --verbose --target ${{ matrix.target }}
       - name: Sign
         run: codesign --force -s - target/release/tmc-langs-cli
       - name: Deploy
@@ -103,9 +107,10 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
       - name: Cargo build
+        working-directory: tmc-langs-cli
         run: |
           rustup target add ${{ matrix.target }}
           cargo install cross
-          cross build -p tmc-langs-cli --release --verbose --target ${{ matrix.target }}
+          cross build --release --verbose --target ${{ matrix.target }}
       - name: Deploy
         run: gsutil cp target/${{ matrix.target }}/release/tmc-langs-cli gs://${{ secrets.GCP_BUCKET }}/tmc-langs-rust/tmc-langs-cli-${{ matrix.target }}-$TAG
