--- a/tmc-langs-util/Cargo.toml
+++ b/tmc-langs-util/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 license = "MIT OR Apache-2.0"
 
 [features]
+default = []
 server = ["md5", "shellwords", "zstd"]
 
 [dependencies]
