--- a/plugins/r/Cargo.toml
+++ b/plugins/r/Cargo.toml
@@ -14,6 +14,7 @@ serde_json = "1"
 thiserror = "1"
 
 [dev-dependencies]
-simple_logger = "1"tempfile = "3"
+simple_logger = "1"
+tempfile = "3"
 walkdir = "2"
 zip = "0.5"
